Update deployment script and configuration for ECR integration
- Enabled the ECR push step in `complete_deployment.sh` by removing comments and executing the script to push images to ECR.
- Updated `config.env` to reflect the correct ECR registry URL for the application.

--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 # Docker Hub Configuration
 DOCKER_USERNAME=prag1402       # prag1402
 DOCKER_REPO_NAME=g5_slabai     # Updated to match ECR repository names
-ECR_REGISTRY=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+ECR_REGISTRY=975050024946.dkr.ecr.us-east-1.amazonaws.com/g5-e2e
 
 # Application Configuration
 NODE_ENV=production
